--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,13 @@ qwalkr is a numerical suite for investigating quantum walks, providing estimates
 
 ## Installation
 
-Currently, qwalkr is only available on GitHub. You can install the development version of it like so:
+You can install the stable version of `qwalkr` from CRAN:
+
+```{r, eval=FALSE}
+install.packages("qwalkr")
+```
+
+For the development version, you can install from Github like so:
 
 ```{r, eval=FALSE}
 # install.packages("devtools")
